package aparelho.interfaces;

public interface ReprodutorMusical {

    void tocar();

    void pausar();

    void selecionarMusica(String musica);

}
